(library
 (name node)
 (public_name node)
 (preprocess
  (pps gen_js_api.ppx))
 (js_of_ocaml
  (javascript_files node_stub.js))
 (libraries ojs js_of_ocaml)
 (modes byte))

(rule
 (targets buffer.ml)
 (deps buffer.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets child_process.ml)
 (deps child_process.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets console.ml)
 (deps console.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets crypto.ml)
 (deps crypto.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets dns.ml)
 (deps dns.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets fs.ml)
 (deps fs.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets global.ml)
 (deps global.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets http.ml)
 (deps http.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets https.ml)
 (deps https.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets import.ml)
 (deps import.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets js.ml)
 (deps js.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets net.ml)
 (deps net.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets os.ml)
 (deps os.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets path.ml)
 (deps path.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets process.ml)
 (deps process.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets promise.ml)
 (deps promise.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets stream.ml)
 (deps stream.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets timers.ml)
 (deps timers.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets tls.ml)
 (deps tls.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets tty.ml)
 (deps tty.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets util.ml)
 (deps util.mli)
 (action
  (run gen_js_api %{deps})))

(rule
 (targets web_crypto.ml)
 (deps web_crypto.mli)
 (action
  (run gen_js_api %{deps})))
